Bug 282578 - cannot edit the first sign up institution
Summary: cannot edit the first sign up institution
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 21:29 UTC by Claus Rebler
Modified: 2011-10-02 12:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
first step (194.81 KB, image/png)
2011-09-22 21:30 UTC, Claus Rebler
Details
edit page (205.40 KB, image/png)
2011-09-22 21:31 UTC, Claus Rebler
Details
bug (196.39 KB, image/png)
2011-09-22 21:31 UTC, Claus Rebler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Claus Rebler 2011-09-22 21:29:31 UTC
Version:           4.5.3 (using KDE 4.6.0) 
OS:                Linux

cannot edit the first sign up institution

Message after save button: Unable to store institution: unknown institution

Reproducible: Always

Steps to Reproduce:
* make a new kmy file
* @ first login the institution has no name
* right mouse klick "edit institution" is grey
* dobble klick @ institution with no name open "edit institution"
* i edit the name an klick ok
* the message "Unable to store institution: unknown institution"


Expected Results:  
my edit are safe

OS: Linux (i686) release 2.6.37.6-0.7-desktop
Compiler: gcc
Comment 1 Claus Rebler 2011-09-22 21:30:51 UTC
Created attachment 63865 [details]
first step
Comment 2 Claus Rebler 2011-09-22 21:31:12 UTC
Created attachment 63866 [details]
edit page
Comment 3 Claus Rebler 2011-09-22 21:31:29 UTC
Created attachment 63867 [details]
bug
Comment 4 Jack 2011-09-22 21:49:10 UTC
Try using "new institution" instead of "edit institution."  The listing you selected in the institutions view is for any accounts without an institution.  It isn't really an institution that you can edit.

I think the real bug here is bringing up the institution edit dialog if the selected institution is "Accounts with no institution assigned." which isn't really an institution, thus the error message on trying to save it.
Comment 5 Thomas Baumgart 2011-09-23 08:43:15 UTC
SVN commit 1255051 by tbaumgart:

Don't open the institution editor if selected institution does not have an ID

BUG: 282578

 M  +4 -0      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1255051
Comment 6 Claus Rebler 2011-09-23 20:46:12 UTC
then I have to say unfortunately
what brings one a template if you can not use this?
* You may not use the money to rename or Institute
* Pull or drag & drop shortcuts into the accounts and other bank
Comment 7 Jack 2011-09-23 21:21:50 UTC
Acually - given Thomas's fix, this should probably be closed as Fixed rather than Invalid.

Claus - I'm sorry, but I really don't understand what your problem is.  Perhaps if you post in German, someone can translate.

However - it seems there is a bug in the program.  When you select "Accounts with no institution assigned" you are not selecting an institution - so it really should not give you the "edit institution" dialog.  You cannot rename an institute that does not exist.  You really need to create a new institution before you can edit it.
Comment 8 Thomas Baumgart 2011-09-24 05:53:30 UTC
Yes, there was a bug. When "Accounts with no institution assigned" is selected you cannot activate "Institution/Edit..." or the "Edit.." option in the context menu. That is disabled for a long time. The only leak that existed was using the double click to open the editor. The fix above closes that leak.

I also like the idea about using German in this case.
Comment 9 Cristian Oneț 2011-10-02 12:31:12 UTC
SVN commit 1256928 by conet:

Don't open the institution editor if selected institution does not have an ID

Backported to the stable branch.

BUG: 282578



 M  +4 -0      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1256928