Don't open the institution editor if selected institution does not have an ID

Backported to the stable branch.

BUG: 282578


svn path=/branches/stable/extragear-kde4/office/kmymoney/; revision=1256928